--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "@strapi/plugin-i18n": "4.1.2",
     "@strapi/plugin-users-permissions": "4.1.2",
     "@strapi/strapi": "4.1.2",
-    "jsonwebtoken": "^8.5.1",
-    "jwt-decode": "^3.1.2",
     "pg": "^8.7.3",
-    "sqlite3": "5.0.2"
+    "sqlite3": "5.0.2",
+    "webpack": "^5.70.0"
   },
   "author": {
     "name": "A Strapi developer"
